@@ -26,6 +26,11 @@
   <artifactId>netty-handler</artifactId>
   <packaging>jar</packaging>
 
+  <properties> 
+    <!-- Needed for SelfSignedCertificate -->
+    <argLine.java9.extras>--add-exports java.base/sun.security.x509=ALL-UNNAMED</argLine.java9.extras>
+  </properties>
+
   <name>Netty/Handler</name>
 
   <dependencies>
